updated savetranscodedvariants function