@@ -12,6 +12,7 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -84,7 +85,7 @@ public class VideoService {
                             buildPublicUrl(v.getS3Key()),
                             v.getContentType() != null ? v.getContentType() : video.getContentType()
                     ))
-                    .toList();
+                    .collect(Collectors.toList());
 
             video.setVariants(variants);
             video.setStatus(VideoStatus.PROCESSED);
